# kora-monitor-bot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DEEP_DIVE.md  Dockerfile  README.md  WALKTHROUGH_SCRIPT.md
.devcontainer/: devcontainer.json
.gemini/: instructions.md
.github/workflows/: ci.yml
docs/: PROJECT_GOALS.md
docs/api/: commands.md
docs/architecture/: 001-rent-model.md  002-database-schema.md
docs/guides/: configuration.md  onboarding.md  troubleshooting.md
migrations/: 202601170001_initial_schema.sql
scripts/: pre-commit  setup.sh
src/: config.rs  db.rs  lib.rs  main.rs  state.rs
src/bot/: alerts.rs  commands.rs  mod.rs
src/solana/: client.rs  mod.rs  reclaim.rs  test_utils.rs
tasks/: 0001-prd-kora-monitor-bot.md  tasks-0001-prd-kora-monitor-bot.md
