[package]
name = "kora-monitor-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "1.18"
solana-sdk = "1.18"
solana-account-decoder = "1.18"
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1.36", features = ["full"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
bs58 = "0.5"
sqlx = { version = "0.6", default-features = false, features = ["sqlite", "runtime-tokio-rustls", "macros", "migrate"] }
